--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-* {
-  -webkit-box-sizing: border-box;
-}
-
 body {
   background-color: #3E363F;
 }
@@ -12,41 +8,63 @@ body {
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 
   margin: 0 auto;
+
+  /*!* Tasty shadow *!*/
+  /*box-shadow: 0px 3px 3px #000000;*/
 }
 
 .Board {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-
-  height: 30vh;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: stretch;
 }
 
 .Card {
-  padding: 10px;
+  /* Layout */
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
 
-  /* 4 * width + 5 * margin = 100% */
-  /* margin-bottom should match margin-left */
-  width: 24.25%;
-  height: 100%;
-  margin-left: 0.6%;
-  margin-bottom: 0.6%;
+  /* Size */
+  width: 300px;
+
+  /* Content */
+  text-decoration: none;
+
+  /*!* Tasty shadow *!*/
+  /*margin: 10px;*/
+  /*box-shadow: 2px 3px 3px #000000;*/
+}
+
+.CardTitle {
+  color: #F1E4E8;
+  text-align: left;
+
+  padding: 10px;
+}
+
+.CardSummary {
+  color: #F1E4E8;
+  text-align: left;
+
+  padding: 10px 10px 10px 20px;
 }
 
 .Card:nth-of-type(3n) {
-  color: #F1E4E8;
   background: #5AB1BB;
 }
 
 .Card:nth-of-type(3n+1) {
-  color: #F1E4E8;
   background: #A08B94;
 }
 
 .Card:nth-of-type(3n+2) {
-  color: #F1E4E8;
   background: #A5C882;
 }
 
