--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ body {
 
   margin: 0 auto;
 
-  /*!* Tasty shadow *!*/
-  /*box-shadow: 0px 3px 3px #000000;*/
+  /* Tasty shadow */
+  box-shadow: 0px 3px 3px #000000;
 }
 
 .Board {
@@ -22,7 +22,9 @@ body {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  align-content: stretch;
+  align-content: center;
+
+  height: 94vh;
 }
 
 .Card {
@@ -32,14 +34,15 @@ body {
   flex-basis: 0;
 
   /* Size */
-  width: 300px;
+  width: 250px;
+  max-height: 150px;
 
   /* Content */
   text-decoration: none;
 
-  /*!* Tasty shadow *!*/
-  /*margin: 10px;*/
-  /*box-shadow: 2px 3px 3px #000000;*/
+  /* Tasty shadow */
+  margin: 10px;
+  box-shadow: 2px 3px 3px #000000;
 }
 
 .CardTitle {
