--- a/src/App.css
+++ b/src/App.css
@@ -2,79 +2,67 @@ body {
   background-color: #3E363F;
 }
 
-.Header {
-  background-color: #F1E4E8;
-  height: 6vh;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
-  margin: 0 auto;
-
-  /* Tasty shadow */
-  box-shadow: 0px 3px 3px #000000;
-}
-
-.Board {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  align-content: flex-start;
-
-  height: 94vh;
-}
-
-.Card {
-  /* Layout */
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 0;
-
-  /* Size */
-  width: 250px;
-  max-height: 150px;
-
-  /* Content */
-  text-decoration: none;
-
-  /* Tasty shadow */
-  margin: 10px;
-  box-shadow: 2px 3px 3px #000000;
-}
-
-.CardTitle {
-  color: #F1E4E8;
-  text-align: left;
-
-  padding: 10px;
-}
-
-.CardSummary {
-  color: #F1E4E8;
-  text-align: left;
-
-  padding: 10px 10px 10px 20px;
-}
-
-.Card:nth-of-type(3n) {
-  background: #5AB1BB;
-}
-
-.Card:nth-of-type(3n+1) {
-  background: #A08B94;
-}
-
-.Card:nth-of-type(3n+2) {
-  background: #A5C882;
-}
-
 .Article {
   color: #F1E4E8
 }
 
 .About {
   color: #F1E4E8
+}
+
+.HeaderContainer {
+  background-color: rebeccapurple;
+
+  display: flex;
+
+  justify-content: center;
+}
+
+.Header {
+  background-color: red;
+
+  height: 60px;
+  width: 1000px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.HeaderCard {
+  background-color: darkseagreen;
+  text-align: center;
+  line-height: 60px; /* Same as Header height since align-items is stretch. */
+
+  width: 60px;
+
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.BoardContainer {
+  background-color: yellow;
+
+  display: flex;
+
+  justify-content: center;
+}
+
+.Board {
+  background-color: cornflowerblue;
+
+  max-width: 1000px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.BoardCard {
+  background-color: orange;
+  text-align: center;
+
+  flex-grow: 1;
+
+  margin: 10px;
 }
