<Jake> Revert to original state so that page layout can be built up in a structured way

--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,14 @@
-body {
-  background-color: #3E363F;
+.App {
+  background-color: #222;
+  height:100vh;
 }
 
-.Article {
-  color: #F1E4E8
-}
-
-.About {
-  color: #F1E4E8
-}
-
-.Container {
-  background-color: rebeccapurple;
-
-  display: flex;
-  flex-direction: column;
+.App-header {
+  color: white;
+  height: 100vh;
 
   align-items: center;
-}
-
-.Header {
-  background-color: red;
-
-  height: 60px;
-  width: 1000px;
-  max-width: 100%;
-  flex-shrink: 1;
-
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-}
-
-.HeaderCard {
-  background-color: darkseagreen;
-  text-align: center;
-  line-height: 60px; /* Same as Header height since align-items is stretch. */
-
-  width: 60px;
-
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.BoardContainer {
-  background-color: yellow;
-
-  display: flex;
-
   justify-content: center;
 }
 
-.Board {
-  background-color: cornflowerblue;
-
-  max-width: 1000px;
-
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.BoardCard {
-  background-color: orange;
-  text-align: center;
-
-  flex-grow: 1;
-
-  margin: 10px;
-}
