--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.app {
   background-color: #222;
   height:100%;
 
@@ -7,25 +7,46 @@
   align-items: center;
 }
 
-.Header {
+.header {
   background-color: #333;
   height: 10vh;
-  width: 50vw;
-}
+  width: 100%;
 
-.Body {
-  background-color: #444;
-  color: white;
-  height: 80vh;
-  width: 50vw;
-
-  align-items: center;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
-.Footer {
+.logo {
+  background-color: #333444;
+  height: 10vh;
+  width: 20vw;
+}
+
+.body {
+  background-color: #444;
+  color: white;
+  min-height: 80vh;
+  width: 50vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.card {
+  background-color: #333444;
+  height: 10vh;
+  width: 20vw;
+
+  margin: 10px;
+}
+
+.footer {
   background-color: #555;
   height: 10vh;
-  width: 50vw;
+  width: 100%;
 }
