--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
   background-color: #222;
-  height:100%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
@@ -9,8 +9,10 @@
 
 .header {
   background-color: #333;
-  height: 10vh;
+  height: 100px;
   width: 100%;
+
+  z-index: 2;
 
   display: flex;
   align-items: center;
@@ -19,34 +21,48 @@
 
 .logo {
   background-color: #333444;
-  height: 10vh;
-  width: 20vw;
+  height: 100px;
+  width: 300px;
 }
 
 .body {
   background-color: #444;
-  color: white;
-  min-height: 80vh;
-  width: 50vw;
+  width: 300px;
+  min-height: 100vh;
+
+  z-index: 1;
+
+  margin-top: -100px;
+  margin-bottom: -100px;
+
+}
+
+.cardContainer {
+  background-color: #333555;
+
+  margin-top: 100px;
+  margin-bottom: 100px;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 .card {
   background-color: #333444;
-  height: 10vh;
-  width: 20vw;
+  height: 100px;
+  width: 300px;
 
   margin: 10px;
 }
 
 .footer {
   background-color: #555;
-  height: 10vh;
+  height: 100px;
   width: 100%;
+
+  z-index: 2;
 }
