--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
   }
 }
 
-.card-container {
+.body-container {
   background-color: var(--dark-color);
 
   margin-top: var(--header-height);
@@ -72,6 +72,12 @@
 .card {
   background-color: #333444;
 
+  color: grey;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
   margin: var(--card-border);
 
   height: 150px;
@@ -84,5 +90,26 @@
   height: var(--footer-height);
   width: 100%;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
   z-index: 2;
+}
+
+.about-link {
+  background-color: #444666;
+  height: 50px;
+  width: 100px;
+
+  color: grey
+}
+
+.about {
+  color: grey
+}
+
+.article {
+  color: grey
 }
