--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   background-color: #444333;
   height: 50px;
   width: 100px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: grey;
 }
 
 .body {
@@ -103,6 +108,9 @@
   height: 50px;
   width: 100px;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: grey
 }
 
