<Jake> Fix header to top of window

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@
   justify-content: center;
 
   z-index: 3;
+
+  position: fixed;
 }
 
 .logo {
@@ -46,7 +48,6 @@
   width: 100%;
 
   min-height: 100vh;
-  margin-top: calc(-1 * var(--header-height));
   margin-bottom: calc(-1 * var(--footer-height));
 
   display: flex;
